# thermal-camera-viewer

./: .gitignore  NOTICE  README.md  build-deb.sh  build-macos.sh  clean.sh  install-windows.ps1  install.sh  pyproject.toml
data/: thermal-camera-viewer.desktop
thermal_camera_viewer/: __init__.py  __main__.py  p3_camera.py  uvc_driver.py  viewer.py
