[project]
name = "thermal-camera-viewer"
version = "3.3.0"
description = "Thermal Camera Viewer — USB thermal camera viewer & UVC virtual webcam"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "pyusb>=1.2",
    "PyQt5>=5.15",
]

[project.urls]
Repository = "https://github.com/skywalker1905/thermal-camera-viewer.git"

[project.scripts]
thermal-camera-viewer = "thermal_camera_viewer.viewer:main"
thermal-camera-viewer-uvc = "thermal_camera_viewer.uvc_driver:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["thermal_camera_viewer/"]
